# escalator-pantomime-sensing

./: README.md  pyproject.toml  散布図表示.py  最大角度の平均.py  角度比較.py  角速度積分XYZ軸.py  角速度積分Z軸.py
src/: angular_velocity_integration_x.py  angular_velocity_integration_y.py  angular_velocity_integration_z.py  average_min_angle.py  range_min_max.py
src/data/floor1/: Gyroscope10_2.csv  Gyroscope11_2.csv  Gyroscope12_2.csv  Gyroscope13_2.csv  Gyroscope14_2.csv  Gyroscope15_2.csv  Gyroscope16_2.csv  Gyroscope17_2.csv  Gyroscope18_2.csv  Gyroscope19_2.csv  Gyroscope1_2..csv  Gyroscope21_2.csv  Gyroscope22_2.csv  Gyroscope23_2.csv  Gyroscope24_2.csv  Gyroscope25_2.csv  Gyroscope26_2.csv  Gyroscope27_2.csv  Gyroscope28_2.csv  Gyroscope29_2.csv  Gyroscope2_2.csv  Gyroscope30_2.csv  Gyroscope3_2.csv  Gyroscope4_2.csv  Gyroscope5_2.csv  Gyroscope6_2.csv  Gyroscope7_2.csv  Gyroscope8_2.csv  Gyroscope9_2.csv
src/data/floor2/: Gyroscope1_1.csv  Gyroscope1_2.csv  Gyroscope1_3.csv  Gyroscope1_4.csv  Gyroscope2_1.csv  Gyroscope2_2.csv  Gyroscope2_3.csv  Gyroscope2_4.csv  Gyroscope3_1.csv  Gyroscope3_2.csv  Gyroscope3_3.csv  Gyroscope3_4.csv  Gyroscope4_1.csv  Gyroscope4_2.csv  Gyroscope4_3.csv  Gyroscope4_4.csv
