[project]
name = "escalator-pantomime-sensing-ryouta"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "japanize-matplotlib>=1.1.3",
    "matplotlib>=3.10.0",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "scipy>=1.15.2",
]
